# zera-ai-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  flask_app.py  pyproject.toml  requirements.txt
docs/: api_setup.md  demo_script.md  submission_content.md
scripts/: export_sample_report.py  health_check.py  run_demo.py  seed_qdrant.py
static/: app.js  style.css
storage/audit/: ZERA-0F9B9C0B.md  ZERA-1FD8C288.md  ZERA-23F6C9A5.md  ZERA-26712D21.md  ZERA-5D91BCED.md  ZERA-A5DEBEA2.md
templates/: index.html
tests/: test_demo_scenarios.py  test_qdrant_memory.py  test_risk_engine.py  test_workflow.py
zera/: schemas.py
zera/agents/: base_agent.py  intake_agent.py  memory_agent.py  permit_report_agent.py  planning_agent.py  residual_energy_agent.py  safety_critic_agent.py
zera/data/: demo_scenarios.json  hazard_catalogue.json  incident_history.json  loto_procedure.md  machine_profile.json
zera/memory/: qdrant_store.py
zera/services/: report_generator.py
zera/tools/: pressure_analysis.py  risk_engine.py
zera/ui/: energy_graph.py
zera/workflows/: safety_workflow.py
