[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zera-ai-agent"
version = "0.1.0"
description = "Zero-Energy Release Assurance Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "pydantic>=2.5.0",
    "qdrant-client>=1.7.0",
    "graphviz>=0.20.1",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "google-genai>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]
